.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:48:23 **** Incremental Build of configuration Debug for project PeripheralsDrivers ****
make clean all 
rm -rf ./Src/adc_driver_hal.d ./Src/adc_driver_hal.o ./Src/adc_driver_hal.su ./Src/cmd_driver.d ./Src/cmd_driver.o ./Src/cmd_driver.su ./Src/exti_driver_hal.d ./Src/exti_driver_hal.o ./Src/exti_driver_hal.su ./Src/gpio_driver_hal.d ./Src/gpio_driver_hal.o ./Src/gpio_driver_hal.su ./Src/i2c_driver_hal.d ./Src/i2c_driver_hal.o ./Src/i2c_driver_hal.su ./Src/pll_driver_hal.d ./Src/pll_driver_hal.o ./Src/pll_driver_hal.su ./Src/pwm_driver_hal.d ./Src/pwm_driver_hal.o ./Src/pwm_driver_hal.su ./Src/systick_driver_hal.d ./Src/systick_driver_hal.o ./Src/systick_driver_hal.su ./Src/timer_driver_hal.d ./Src/timer_driver_hal.o ./Src/timer_driver_hal.su ./Src/usart_driver_hal.d ./Src/usart_driver_hal.o ./Src/usart_driver_hal.su
rm -rf libPeripheralsDrivers.a
 
arm-none-eabi-gcc "../Src/adc_driver_hal.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/aristizabal/Documents/Repositories/Robotica_2024_01/Software_Toolchain/STM32Cube_FW_F4_V1.27.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/aristizabal/Documents/Repositories/Robotica_2024_01/Software_Toolchain/STM32Cube_FW_F4_V1.27.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/adc_driver_hal.d" -MT"Src/adc_driver_hal.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/adc_driver_hal.o"
arm-none-eabi-gcc "../Src/cmd_driver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I"/home/aristizabal/Documents/Repositories/Robotica_2024_01/Software_Toolchain/STM32Cube_FW_F4_V1.27.0/Drivers/CMSIS/Device/ST/STM32F4xx/Include" -I"/home/aristizabal/Documents/Repositories/Robotica_2024_01/Software_Toolchain/STM32Cube_FW_F4_V1.27.0/Drivers/CMSIS/Include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/cmd_driver.d" -MT"Src/cmd_driver.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/cmd_driver.o"
../Src/cmd_driver.c: In function 'parseCommands':
../Src/cmd_driver.c:126:19: error: 'usart1Comm' undeclared (first use in this function)
  126 |   usart_WriteMsg(&usart1Comm, "Help Menu CMDS: \n");
      |                   ^~~~~~~~~~
../Src/cmd_driver.c:126:19: note: each undeclared identifier is reported only once for each function it appears in
../Src/cmd_driver.c:145:5: warning: implicit declaration of function 'forwardMove' [-Wimplicit-function-declaration]
  145 |     forwardMove(secondParameter);
      |     ^~~~~~~~~~~
../Src/cmd_driver.c:154:5: warning: implicit declaration of function 'backwardMove' [-Wimplicit-function-declaration]
  154 |     backwardMove(secondParameter);
      |     ^~~~~~~~~~~~
../Src/cmd_driver.c:168:22: error: 'PWM_L' undeclared (first use in this function)
  168 |     updateDutyCycle(&PWM_L,(uint16_t)firstParameter);
      |                      ^~~~~
../Src/cmd_driver.c:169:22: error: 'PWM_R' undeclared (first use in this function); did you mean 'PWR'?
  169 |     updateDutyCycle(&PWM_R,(uint16_t)secondParameter);
      |                      ^~~~~
      |                      PWR
../Src/cmd_driver.c:187:7: error: 'flagEncR' undeclared (first use in this function)
  187 |    if(flagEncR){
      |       ^~~~~~~~
../Src/cmd_driver.c:188:37: error: 'counter_R' undeclared (first use in this function)
  188 |     sprintf(bufferMsg,"Right,%u\n", counter_R);
      |                                     ^~~~~~~~~
../Src/cmd_driver.c:192:7: error: 'flagEncL' undeclared (first use in this function)
  192 |    if(flagEncL){
      |       ^~~~~~~~
../Src/cmd_driver.c:193:36: error: 'counter_L' undeclared (first use in this function)
  193 |     sprintf(bufferMsg,"Left,%u\n", counter_L);
      |                                    ^~~~~~~~~
../Src/cmd_driver.c:206:3: error: 'counterPercDuty' undeclared (first use in this function)
  206 |   counterPercDuty = 0;
      |   ^~~~~~~~~~~~~~~
../Src/cmd_driver.c:225:7: error: 'flagPeriod' undeclared (first use in this function)
  225 |    if(flagPeriod){
      |       ^~~~~~~~~~
../Src/cmd_driver.c:235:5: warning: implicit declaration of function 'turnOff' [-Wimplicit-function-declaration]
  235 |     turnOff();
      |     ^~~~~~~
../Src/cmd_driver.c:251:3: error: 'flagStop' undeclared (first use in this function)
  251 |   flagStop = 1;
      |   ^~~~~~~~
../Src/cmd_driver.c:257:3: warning: implicit declaration of function 'turnOn' [-Wimplicit-function-declaration]
  257 |   turnOn();
      |   ^~~~~~
make: *** [Src/subdir.mk:46: Src/cmd_driver.o] Error 1
"make clean all" terminated with exit code 2. Build might be incomplete.
